--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -37,7 +37,7 @@ def all_pods
 #  pod 'AgoraRtcEngine_Special_iOS', :path => 'AgoraRtcEngine_iOS.podspec'
   pod 'AgoraRtcEngine_iOS', '~> 4.3.1'
 #  pod 'AgoraRtcEngine_Special_iOS', '4.1.1.29'
-  pod 'AgoraRtm', '2.2.0'
+  pod 'AgoraRtm', :path => 'AgoraRtm.podspec'
 
   pod 'AudioScenarioApi', :path => 'AgoraEntScenarios/Common/API/AudioScenarioApi'
   pod 'RTMSyncManager', :path => 'AgoraEntScenarios/Common/API/RTMSyncManager'
