--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -27,11 +27,11 @@ def all_pods
   pod 'JXCategoryView', '1.6.1'
 
   # 火山美颜
-  #pod 'bytedEffect', :path => 'bytedEffect.podspec'
+  pod 'bytedEffect', :path => 'bytedEffect.podspec'
   # 商汤美颜
-  #pod 'SenseLib', :path => 'sense.podspec'
+  pod 'SenseLib', :path => 'sense.podspec'
   # 相芯美颜
-#  pod 'fuLib', :path => 'fu.podspec'
+  pod 'fuLib', :path => 'fu.podspec'
 
   pod 'AgoraSyncManager', '~> 2.1.6'
 #  pod 'AgoraRtcEngine_Special_iOS', :path => 'AgoraRtcEngine_iOS.podspec'
