--- a/Android/scenes/show/build.gradle
+++ b/Android/scenes/show/build.gradle
@@ -17,6 +17,11 @@ android {
     externalNativeBuild {
         cmake { path "src/main/cpp/CMakeLists.txt" }
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['src/main/jniLibs']
+        }
+    }
 }
 
 dependencies {
